--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "react-google-charts": "^3.0.15"
   },
   "devDependencies": {
     "eslint": "^7.24.0",
